[project]
name = "BECKEND"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Caetano e João G.", email = "caetanopfreitas@gmail.com"},
]
dependencies = ["django>=5.1.6", "djangorestframework>=3.15.2"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
